# denoise-app

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  MCP.md  PORTABILITY.md  QUALITY.md  README.md  bootstrap.sh  mcp_server.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
app/: bootstrap.sh  pyproject.toml
app/api/: dnjobs.py  mcp_server.py  models.py  profiles.py  rates.py  server.py  storage.py
app/cli/: denoise.py  evaluate.py
app/core/: __init__.py  denoise.py  metrics.py  prosody.py
app/core/analysis/: metrics.py  prosody.py
app/core/clone/: __init__.py  clone.py  tts_worker.py
app/core/denoise/: __init__.py  denoise.py
app/core/media/: audio.py  ffbin.py
app/quality/: denoise_bench.py  run_eval.py
app/tests/: test_architecture.py  test_core.py  test_eta_coldstart.py  test_task_reconcile.py
app/voice/: clone_say.py  evaluate_tts.py
core/: __init__.py  audio.py  clone.py  denoise.py  ffbin.py  metrics.py  prosody.py  tts_worker.py
docs/: CROSS-PLATFORM.md  DESIGN-BRIEF.md  DISTRIBUTION.md  MCP.md  PORTABILITY.md  QUALITY.md  STORAGE.md  i18n-register-glossary-request.md  index.html
landing/: next.config.mjs  package.json
macapp/: build_app.sh
polaris/: mission.md
quality/: denoise_bench.py  run_eval.py  testset.txt
scripts/: build_bundle.ps1  build_bundle.sh  install.sh  install_dfn.sh  install_resynth.sh  launcher.bat  launcher.command  make_release.sh  verify_cleanroom.sh
tests/: test_architecture.py  test_core.py
voice/: clone_say.py  evaluate_tts.py  requirements-voice.txt
(+141 files in other folders)
